# AI_CTA_Stroke

./: .dockerignore  .gitignore  BONE_MASK_FIX.md  CLAUDE.md  COMMAND_CHEATSHEET.md  GPU_OPTIMIZATION_SUMMARY.md  PIPELINE_COMPLETION_SUMMARY.md  QUICKSTART_Antiga2008_Pipeline.md  README.md  SLAAO_Pipeline_Dev_Log_v2.docx  SUBPROJECTS.md  batch_log.txt  classification_rules.html  environment.cardiac_ct_explorer.yml  environment.centerline_mps.yml  environment.centerline_mps_julia.yml  environment.cta_deface.yml  environment.dgx_spark.yml  environment.laa_shape.yml  environment.nv_segment_ct.yml  environment.topcow_claim.yml  pyproject.toml  requirements.txt  run_batch_la_metrics.py  run_batch_laa.py  run_batch_shape.py  run_test_pipeline.py  test_real_cta.py
aorta_cta_radiomics/: .gitignore  README.md  environment.yml  pyproject.toml
aorta_cta_radiomics/configs/: calcium_dynamic_500hu.yaml  default.yaml  encoders_ct_foundation_ensemble.yaml  encoders_tap_ct.yaml  radiomics.yaml  wall_from_fat_only.yaml  wall_lumen_only_mean_up.yaml  wall_morphology_fine_500hu.yaml
aorta_cta_radiomics/examples/: manifest.csv
aorta_cta_radiomics/scripts/: analyze_lumen_hu_thresholds.py  build_slao_etiology_aorta_burden_or.py  build_slao_etiology_domain_burden_or.py  build_slao_etiology_radiomics_scores.py  build_slao_mace_aorta_dataset.py  build_slao_mace_aorta_report.py  build_slao_mace_radiomics_scores.py  check_slao_per_cm_ratio_outliers.py  load_aorta_qc_slicer.py  measure_wall_thickness.py  qc_slicer.py  run_base_case.py  run_batch.py  run_batch_with_watchdog.py  run_calcium_case.py  run_domain_balanced_recursive_selection.py  run_fat_wall_case.py  run_manifest_staged.py  run_pca_clustering.py  run_protrusions_case.py  run_radiomics_case.py  run_single_case.py  scan_artifact_burden.py
aorta_cta_radiomics/src/aorta_cta_radiomics/: __init__.py  aorta_segments.py  batch_progress.py  batch_watchdog.py  calcification.py  calcium_omics.py  centerline.py  cli.py  config.py  crop.py  encoders.py  fat_omics.py  fat_wall.py  features.py  io.py  lumen_geometry.py  lumen_protrusions.py  metadata_filter.py  preprocess.py  qc_slicer.py  radiomics.py  segmentation_qc.py  shells.py  stage_outputs.py  staged.py  visualization.py  wall_morphology.py  wall_thickness.py
aorta_cta_radiomics/tests/: test_batch_progress.py  test_batch_watchdog.py  test_calcification.py  test_calcium_omics.py  test_crop.py  test_encoders.py  test_fat_omics.py  test_fat_wall.py  test_geometry.py  test_io.py  test_lumen_protrusions.py  test_metadata_filter.py  test_qc_slicer.py  test_shells.py  test_wall_morphology.py  test_wall_thickness.py
app/: runner.py  streamlit_app.py
compliance/: README.md
configs/: topcow_labels.json
cta_common/: pyproject.toml
cta_common/src/cta_common/: __init__.py  artifacts.py  geometry.py  io.py  shells.py  slicer_qc.py  subprocess_env.py
cta_common/tests/: test_artifacts.py  test_geometry.py  test_io.py  test_shells.py  test_slicer_qc.py  test_subprocess_env.py
docker/: Dockerfile  docker-compose.yml  prefetch_weights.sh  run.sh  run_laa_batch.sh
docs/: END_TO_END_WORKFLOW.md  IMPLEMENTATION_SUMMARY_Antiga2008_Pipeline.md  NEXT_STEPS_RADIOMICS_MESH_DEFACE.md  NNUNET_MPS_PIPELINE.md  mar_adn_poc.md  (+4 more)
subprojects/cta-dental-opportunistic-screening/: README.md  pyproject.toml
subprojects/cta-dental-opportunistic-screening/configs/: default.yaml  pilot_mps.yaml
subprojects/cta-dental-opportunistic-screening/cta_dental/: __init__.py  cli.py  config.py  deid.py  dicom_io.py  external_tools.py  features.py  geometry.py  imaging_cache.py  logging_utils.py  preprocess.py  qc.py  report.py  roi.py
subprojects/cta-dental-opportunistic-screening/cta_dental/segmenters/: __init__.py  base.py  dentalsegmentator.py  oralseg.py  rail.py  totalsegmentator.py
subprojects/cta-dental-opportunistic-screening/scripts/: aggregate_dental_cohort.py  run_dental_batch.py  select_dental_eligible.py
subprojects/cta-dental-opportunistic-screening/tests/: test_geometry.py  test_report_schema.py  test_roi_bbox.py  test_segmenter_reuse.py
subprojects/radselect/: README.md  pyproject.toml
subprojects/radselect/src/radselect/: __init__.py  __main__.py  cli.py  config.py  core.py  projections.py  reporting.py
subprojects/radselect/tests/: test_core.py
subprojects/stroke-cta-osa/: README.md  pyproject.toml
subprojects/stroke-cta-osa/configs/: default.yaml  stroke_cta_osa_feature_sets.yaml
subprojects/stroke-cta-osa/scripts/: build_slao_laa_mace_analysis.py  build_slao_osa_analysis.py  run_ts_airway_batch.py
subprojects/stroke-cta-osa/stroke_cta_osa/: __init__.py  adapters.py  airway.py  airway_regions.py  anatomy_priors.py  cli.py  clinical.py  compare_dental.py  composites.py  config.py  dicom_utils.py  evidence_registry.py  fat.py  fat_ontology.py  fat_regions.py  feature_sets.py  features.py  geometry.py  io.py  landmark_schema.py  landmarks.py  logging_utils.py  mandible.py  metric_registry.py  output.py  parallel.py  perivascular.py  qc.py  qc_slicer.py  radiomics.py  rois.py  shared_schema.py  skeletal.py  soft_palate.py  thoracic.py  tongue.py  types.py  viz.py
subprojects/stroke-cta-osa/tests/: conftest.py  test_airway.py  test_airway_regions.py  test_cli.py  test_cli_feature_set_selection.py  test_composites.py  test_config.py  test_dental_adapter.py  test_evidence_registry.py  test_fat.py  test_fat_evidence_tiers.py  test_fat_regions.py  test_feature_metadata_completeness.py  test_feature_sets.py  test_feature_tier_outputs.py  test_landmarks.py  test_mandible.py  test_metric_registry.py  test_outputs.py  test_parallel.py  test_qc.py  test_qc_slicer.py  test_readme_evidence_table.py  test_skeletal.py  test_soft_palate.py  test_tongue.py
subprojects/vertebral_manual/slicer_extension/CTAVertebralSOP/: CMakeLists.txt  CTAVertebralSOP.s4ext  README.md
subprojects/vertebral_manual/slicer_extension/CTAVertebralSOP/CTAFinalizeSOP/: CMakeLists.txt  CTAFinalizeSOP.py
subprojects/vertebral_manual/slicer_extension/CTAVertebralSOP/CTAVertebralWizard/: CMakeLists.txt  CTAVertebralWizard.py
(+232 files in other folders)
