[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cta-stroke"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.10",
    "nibabel>=5.2",
    "networkx>=3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]
