[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aorta-cta-radiomics"
version = "0.1.0"
description = "Aorta-focused stroke CTA radiomics pipeline using existing aorta masks."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Sebastian Fridman"}
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-image",
  "scikit-learn",
  "SimpleITK",
  "nibabel",
  "pyradiomics==3.0.1",
  "PyYAML",
  "typer",
  "tqdm",
  "matplotlib",
  "seaborn",
]

[project.optional-dependencies]
mesh = ["pyvista", "trimesh"]
monai = ["monai", "torch"]
dev = ["pytest", "ruff"]

[project.scripts]
aorta-cta = "aorta_cta_radiomics.cli:main"
aorta-cta-qc = "aorta_cta_radiomics.qc_slicer:main"
aorta-cta-staged = "aorta_cta_radiomics.staged:main"
aorta-cta-watchdog = "aorta_cta_radiomics.batch_watchdog:main"
aorta-cta-progress = "aorta_cta_radiomics.batch_progress:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"
