[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radselect"
version = "0.1.0"
description = "Leakage-safe feature selection and dimensionality reduction for radiomic, clinical, and combined tabular datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sebastian Fridman" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
reports = ["matplotlib>=3.7", "seaborn>=0.13"]
survival = ["lifelines>=0.28"]
dev = ["pytest>=8.0", "ruff"]

[project.scripts]
radselect = "radselect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
